--- a/index.html
+++ b/index.html
@@ -22,70 +22,8 @@
     }
 </style>
 <style>
-    body {
-        background: #faf9ff;
-        padding: 10px;
-        font-family: "Inter", sans-serif;
-        font-optical-sizing: auto;
-        color: #313131;
-    }
-
-    .heading_box h2,
-    .heading_box p,
-    .heading_box svg {
-        margin: 2px auto;
-    }
-
-    .container {
-        max-width: 800px;
-        padding: 20px 0px;
-        width: 100%;
-        margin: 2px auto;
-    }
-
-    .heading_box {
-        padding: 20px;
-        text-align: center;
-        border-radius: 5px;
-        border: 1px solid #e5e5e5;
-        background: #fff;
-        margin: 0px auto;
-        display: flex;
-        /* Make the container a flexbox */
-        flex-direction: row;
-        /* Set the flex direction to column */
-        justify-content: center;
-    }
-
-    h2 {
-        color: #313131;
-        font-size: 24px;
-        font-weight: 700;
-    }
-
-    p {
-        color: #313131;
-        font-size: 14px;
-    }
-
-    .form_div {
-        margin-top: 60px;
-    }
-
-    .input_styling {
-        width: 100%;
-        padding: 18px;
-        font-size: 16px;
-        border: 1px solid #e5e5e5;
-        margin-top: 8px;
-        box-sizing: border-box;
-        /* Add this line */
-        border-radius: 5px;
-    }
-
     input:focus {
-        outline-color: #2e069c;
-        /* This will change the color of the focus outline to blue when you click on an input field */
+        outline-color: var(--primary);
     }
 
     input[type="number"]::-webkit-inner-spin-button,
@@ -129,30 +67,6 @@
         font-weight: 500;
     }
 
-    .lottieimg {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* height: 30vh; */
-        margin: 20px auto;
-        align-items: center;
-        width: 70%;
-
-    }
-
-    /* Full-page overlay style */
-    .loading-layer {
-        display: none;
-        position: fixed;
-        z-index: 9999;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(255, 255, 255, 0.8);
-        justify-content: center;
-        align-items: center;
-    }
 
     /* Loader animation style */
     .loader {
