--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
                 <a href="#">Contact Us</a>
             </div>
             <div style="margin: 40px auto;text-align: center;">
-                <span id="request_id" onclick="pushed_truecaller();get_truecaller_response();">Request Id</span> <br>
-                <span id="userInfo">Response Here</span>
+                <!-- <span id="request_id" onclick="pushed_truecaller();get_truecaller_response();">Request Id</span> <br>
+                <span id="userInfo">Response Here</span> -->
                 <p id="show_response" class="response"> </p>
             </div>
         </section>
