--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <label for="otp">OTP</label>
                             <input type="number" name="otp" id="otpInput" placeholder="Enter 4 Digit OTP here"
                                 min="1000" max="9999" maxlength="4" required>
-                            <span class="input_desc" id="resultMessage" class="hideit response"></span>
+                            <span class="input_desc" id="otp_hint" class="hideit response"></span>
                             <small id="otp_error" class="error_message"></small>
                         </div>
                         <div class="input_field_container">
@@ -390,6 +390,9 @@
                         );
                         // window.location.href = "user.php";
                         document.getElementById("otp_error").display = "none";
+                        document.getElementById("otp_hint").display = "initial";
+                        document.getElementById("otp_hint").innerHTML = "OTP Verified";
+
                         trucaller_got_number();
 
                     } else {
