--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
                         );
                         // window.location.href = "user.php";
                         document.getElementById("otp_error").display = "none";
+                        document.getElementById("phone_error").display = "none";
                         document.getElementById("otp_hint").display = "initial";
                         document.getElementById("otp_hint").innerHTML = "OTP Verified";
 
