--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                             "OTP verification successful. Redirecting to logged-in page..."
                         );
                         // window.location.href = "user.php";
-                        document.getElementById("otp_error").display = "none";
-                        document.getElementById("phone_error").display = "none";
-                        document.getElementById("otp_hint").display = "initial";
+                        document.getElementById("otp_error").style.display = "none";
+                        document.getElementById("phone_error").style.display = "none";
+                        document.getElementById("otp_hint").style.display = "initial";
                         document.getElementById("otp_hint").innerHTML = "OTP Verified";
 
                         trucaller_got_number();
