--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 </div>
                 <button class="secondary_btn">Check Our Plans</button>
             </div>
-            <div class="need_help_container">
+            <div class="need_help_container enter_manually_btn">
                 <span>Need Help?</span>
                 <a href="#">Contact Us</a>
             </div>
