--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <span id="overlay_desc">Your Details are being checked.. </span>
             <button id="overlay_btn" class="submit_btn" style="display: none;">Add Yor Meal Plan Now</button>
             <!-- <button onclick="changeLottie()">Change Lottie</button> -->
-            <span id="closeOverlay">Close</span>
+            <span id="closeOverlay" class="text_btn pointer">Close</span>
         </div>
     </div>
     <div id="loadingLayer" class="loading-layer">
