--- a/index.html
+++ b/index.html
@@ -191,10 +191,7 @@
             <div class="form_container">
                 <div id="signup_form">
                     <div class="input_field_container">
-                        <label for="phone" class="r-flex ali-c gap-1 jut-sb">
-                            <span>Phone Number (+91)</span>
-                            <span>Change Country</span>
-                        </label>
+                        <label for="phone">Phone Number</label>
                         <input type="number" name="phone" id="phoneNumber" placeholder="Enter Your Phone Number here"
                             value="9253029002" onclick="truecaller_push();" onchange="check_number_format();" required>
                         <span class="input_desc" id="phone_hint">Without Country Code</span>
@@ -233,6 +230,10 @@
                 <span>Need Help?</span>
                 <a href="#">Contact Us</a>
             </div>
+            <!-- <div class="need_help_container get_location_btn r-flex ali-c jut-sb gap-1 country_detail">
+                <span>Country</span>
+                <a href="#">India</a>
+            </div> -->
             <div style="margin: 40px auto;text-align: center;">
                 <!-- <span id="request_id" onclick="pushed_truecaller();get_truecaller_response();">Request Id</span> <br>
                 <span id="userInfo">Response Here</span> -->
